# Hackathon-Water-Scarcity

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  actors.py  core.py  ecology.py  plot_analysis.py  plot_multi_analysis.py  scenarios.py  utils.py  water_allocation.py
src/policies/: __init__.py  incentive_policies.py  quota_policies.py
src/utils/: SpatioTemporalSplit.py  analysis.py  data_loader.py  helpers.py  model.py  plots.py  preprocessing.py
