[project]
name = "hackathon-water-scarcity"
version = "0.1.0"
description = "Hackathon Water Scarcity Phase 2"
authors = [
    {name = "David",email = "dmedernach@quantmetry.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (==3.9.2)",
    "seaborn (==0.13.2)",
    "pyyaml (==6.0.2)",
    "scikit-learn (==1.6.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

