[project]
name = "hackathon-water-scarcity"
version = "0.1.0"
description = "Hackathon Water Scarcity : Phase 1"
authors = [
    {name = "David",email = "dmedernach@quantmetry.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12.0.rc1,<4"
dependencies = [
    "python-dotenv (==1.0.1)",
    "xarray (==2024.7.0)",
    "rioxarray (==0.18.1)",
    "cftime (==1.6.4.post1)",
    "dask[dataframe] (==2024.8.0)",
    "cartopy (==0.23.0)",
    "cdsapi (==0.7.2)",
    "h5netcdf (==1.3.0)",
    "matplotlib (==3.9.2)",
    "seaborn (==0.13.2)",
    "scipy (==1.15.0)",
    "plotly (==5.24.1)",
    "pygments (==2.18.0)",
    "osmnx (==2.0.1)",
    "scikit-learn (==1.5.2)",
    "folium (==0.18.0)",
    "geopy (==2.4.1)",
    "nbformat (>=4.2.0)",
    "rasterio (==1.4.2)",
    "pandas-access (==0.0.1)",
    "sqlalchemy (==2.0.36)",
    "owslib (==0.31.0)",
    "shap (==0.46.0)",
    "lightgbm (==4.5.0)",
    "mapie (==0.9.1)",
    "quantile-forest (==1.3.11)",
    "tensorflow (==2.18.0)",
    "papermill (==2.6.0)",
    "ipywidgets (==8.1.5)",
    "interpret (==0.6.9)",
    "tabulate (==0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
